--- a/ng-workspace/demoa-app/src/app/boxa/boxa.component.html
+++ b/ng-workspace/demoa-app/src/app/boxa/boxa.component.html
@@ -1,6 +1,8 @@
 <div>
-    <label for="city">{{labelValue}}</label>
-    <input placeholder="Enter a city" type="text" name="city" [value]="data">
-    <!-- (change)="onchange($event)"> -->
+    <label for="city" class="form-label">{{labelValue}}</label>
+    <div class="input-group mb-3">
+        <input placeholder="Enter a city" type="text" name="city" (change)='onchange($event)'>
+    </div>
 </div>
 <div>Data Modified : {{data}}</div>
+<hr>
