--- a/ng-workspace/demoa-app/src/app/app.component.html
+++ b/ng-workspace/demoa-app/src/app/app.component.html
@@ -9,9 +9,12 @@
 <div>
   <app-customer-form></app-customer-form>
 </div> -->
-<div>
+<!-- <div>
   <app-count-display></app-count-display>
   <div>
     <app-hit-button></app-hit-button>
     <app-counter-app></app-counter-app>
-  </div>
+  </div> -->
+<div>
+  <app-employee-form></app-employee-form>
+</div>
