--- a/ng-workspace/demob-app/src/app/app.component.html
+++ b/ng-workspace/demob-app/src/app/app.component.html
@@ -13,7 +13,7 @@
     <div class="field" id="check-gen">
       <label for="gender">Gender :</label>
       <input type="text" name="gender" id="gender" formControlName="gender" required>
-    </div>
+    </div>s
 
     <div class="field">
       <label for="city">City :</label>
