--- a/ng-workspace/demoa-app/src/app/app.component.html
+++ b/ng-workspace/demoa-app/src/app/app.component.html
@@ -11,10 +11,11 @@
 </div> -->
 <!-- <div>
   <app-count-display></app-count-display>
-  <div>
-    <app-hit-button></app-hit-button>
-    <app-counter-app></app-counter-app>
-  </div> -->
+</div> -->
 <div>
-  <app-employee-form></app-employee-form>
+  <app-counter-app></app-counter-app>
 </div>
+<!-- <div><label for="Number Of Times Hitted : ">
+    <app-hit-button></app-hit-button>
+</div> -->
+<!-- <app-employee-form></app-employee-form> -->
