--- a/ng-workspace/demoa-app/src/app/hit-button/hit-button.component.html
+++ b/ng-workspace/demoa-app/src/app/hit-button/hit-button.component.html
@@ -1,3 +1,3 @@
 <div class="btn btn-secondary">
-    <button (click)="btnClickHandler()">+{{ label }}</button>
+    <button (click)="btnClickHandler()">{{label}}</button>
 </div>
