--- a/ng-workspace/demoa-app/src/app/app.component.html
+++ b/ng-workspace/demoa-app/src/app/app.component.html
@@ -1,9 +1,9 @@
 <h1 class="text-danger">Welcomeeeeeeeeee {{title}} from {{location}}</h1>
 <hr>
-<!-- <div>
+<div>
   <app-boxa labelValue="Location" [data]="location" (onBoxDataChange)="onBoxValueChange($event)"></app-boxa>
 </div>
-<div>
+<!-- <div>
   <app-boxa [data]="location"></app-boxa>
 </div>
 <div>
@@ -12,9 +12,9 @@
 <!-- <div>
   <app-count-display></app-count-display>
 </div> -->
-<div>
+<!-- <div>
   <app-counter-app></app-counter-app>
-</div>
+</div> -->
 <!-- <div><label for="Number Of Times Hitted : ">
     <app-hit-button></app-hit-button>
 </div> -->
