--- a/project/projectLogo.css
+++ b/project/projectLogo.css
@@ -1,46 +1,48 @@
 .logo {
-    width: 90px;
-    height: 90px;
+    width: 150px;
+    height: 150px;
     justify-self: center;
-    margin-left: 10%;
+    margin-left: 12%;
 }
 
 .logo:hover {
-    width: 100px;
-    height: 100px;
-    justify-self: center;
+    width: 170px;
+    height: 170px;
+    justify-self: auto;
     margin-left: 10%;
 }
 
 .logo_area {
     font-family: 'Times New Roman', sans-serif;
-    width: 120px;
-    height: 180px;
+    width: 200px;
+    height: 290px;
     font-style: normal;
     font-weight: 100;
-    font-size: 10px;
+    font-size: 15px;
     color: rgb(6, 6, 56);
     font-variant: initial;
     background-color: rgb(132, 247, 208);
     border-radius: 0 0 10% 10%;
 }
 
-h4 {
-    margin-left: 30%;
+h5 {
+    margin-left: 38%;
     justify-content: center;
 }
 
 span {
     margin-left: -16%;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 p {
-    font-size: 8px;
-    margin-left: 8%;
+    font-size: 13px;
+    margin-left: 6%;
+    margin-top: -10px;
+    font-weight: bold;
 }
 
 span:hover {
-    font-size: 25px;
+    font-size: 33px;
     color: rgb(77, 10, 77);
 }
